# WebGazePy

./: README.md  pyproject.toml  run.py
webgazepy/: __init__.py  fake_streamer.py  main.py  views.py
webgazepy/static/: BasicScene.js  babylon_setup.js  sceneLoader.js  styles.css
webgazepy/static/engine/: Camera.js  Ground.js  IOHandler.js  Light.js
webgazepy/static/scenes/: BasicScene.js  PointCloudScene.js  SceneTemplate.js
webgazepy/templates/: index.html
